--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon -e js server.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.8.1"
+    "graphql": "^15.8.0",
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
